force-app/main/default/objects/AE_to_CDM_Mapping__c/AE_to_CDM_Mapping__c.object-meta.xml
<CustomObject>
    <description>No SOX Impact - No Permissions to be provided on this Object as it is not in use</description>
    <label>(Deprecated) AE to CDM Mapping</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>AE to CDM Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>(Deprecated) AE to CDM Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>