force-app/main/default/objects/AE_to_CDM_Mapping__c/fields/AE__c.field-meta.xml
<CustomField>
    <fullName>AE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AE</description>
    <label>AE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AE_to_CDM_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>