force-app/main/default/objects/AE_to_CDM_Mapping__c/fields/CDM__c.field-meta.xml
<CustomField>
    <fullName>CDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CDM</description>
    <label>CDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AE_to_CDM_Mappings1</relationshipName>
    <type>Lookup</type>
</CustomField>