force-app/main/default/objects/AE_to_CDM_Mapping__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AE_to_CDM_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>