force-app/main/default/objects/AE_to_CDM_Mapping__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Team Role</description>
    <label>Team Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>