force-app/main/default/objects/AE_to_CDM_Mapping__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User for Opportunity Access</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AE_to_CDM_Mappings2</relationshipName>
    <type>Lookup</type>
</CustomField>